wk8s/ingress/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: nginx-ingress-svcacc
      containers:
        - name: nginx-ingress-controller
          image: bitnami/nginx-ingress-controller
#          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.24.1
#          args:
#            - /nginx-ingress-controller
#            - --configmap=ingress-nginx/nginx-configuration
#            #            - --configmap=$(POD_NAMESPACE)/nginx-configuration
#            #            - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
#            #            - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
#            - --publish-service=$(POD_NAMESPACE)/ingress-nginx
#            - --annotations-prefix=nginx.ingress.kubernetes.io
#          securityContext:
#            allowPrivilegeEscalation: true
#            capabilities:
#              drop:
#                - ALL
#              add:
#                - NET_BIND_SERVICE
#            runAsUser: 33
          #          volumeMounts:
          #            - name: custom-snippets
          #              mountPath: /etc/nginx/custom-snippets/
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              path: /healthz
#              port: 10254
#              scheme: HTTP
#            initialDelaySeconds: 10
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 10
#          readinessProbe:
#            failureThreshold: 3
#            httpGet:
#              path: /healthz
#              port: 10254
#              scheme: HTTP
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 10
#      volumes:
#        - name: custom-snippets
#          configMap:
#            name: custom-snippets
