wk8s/ingress/ingress-nginx-desperate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mybatis
  namespace: mybatis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myb.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mybatis-service-service
                port:
                  number: 9090
#  ingressClassName: nginx
---
