wk8s/ingress/ingress-nginx-latest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mybatis
  name: myb-ing
spec:
  rules:
    - host: mybatis.test
      http:
        paths:
          - backend:
              service:
                name: mybatis-service-service
                port:
                  number: 9090
            pathType: Prefix
            path: /
